[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
authors = ["Aurélien Geron <ageron@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
regex = "1.7"
pathfinding = "4.0"
num = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
